--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Hello Thieves!!!</h1>
+
+    <h3>TV Shows:</h3>
+    <ul>
+        <li>Game of Thrones</li>
+        <li>Naruto</li>
+    </ul>
 </body>
 </html>
