--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>Game of Thrones</li>
         <li>Naruto</li>
         <li>Hearthstone</li>
+        <li>Dragon Ball Fighter Z</li>
     </ul>
 </body>
 </html>
